--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,9 +16,7 @@ jobs:
           image: tomcat
           tags: latest
           enableBuildKit: true
-          buildArgs:
-            GPG_KEY_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/key.gpg"
-            ROOTFS_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/rootfs.tar.gz"
+          buildArgs: GPG_KEY_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/key.gpg" ,ROOTFS_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/rootfs.tar.gz"
             MAVEN_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/apache-maven-3.9.1-bin.tar.gz"
             TOMCAT_URL="https://github.com/slurmorg/build-containers-trusted/raw/main/apache-tomcat-10.1.7.tar.gz"
             FINGERPRINT="70092656FB28DBB76C3BB42E89619023B6601234"
